[gd_scene load_steps=2 format=3 uid="uid://ists3875gw64"]

[ext_resource type="Script" path="res://src/Menus/hiscores.gd" id="1_1gpkd"]

[node name="Hi-Scores" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gpkd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Hi-Scores  
"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ClearData" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Reset"

[node name="ReturnToMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Return to menu"

[node name="ResetDialog" type="ConfirmationDialog" parent="."]
title = ""
position = Vector2i(0, 36)
size = Vector2i(200, 70)
dialog_text = "Clicking OK will remove the hi-score data from memory. Continue?"
dialog_autowrap = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ClearData" to="." method="_on_clear_data_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
[connection signal="confirmed" from="ResetDialog" to="." method="_on_reset_dialog_confirmed"]
